fix: insert scrollbar into update modal

--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -12,3 +12,18 @@
     background: rgba(0, 0, 0, 0.2);
     margin: 12px 0;
 }
+
+.markdown {
+    h1 {
+        font-size: 22px;
+        text-decoration: underline;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+}
